Added upload functionality for crypto portfolio and implemented page view states for new and returning users.

--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -10,8 +10,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  color:white;
 }
 
 .coin {
   font-size:20px;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.upload-form {
+  display: flex;
+  flex-direction: column; /* Stacks children vertically */
+  gap: 10px; /* Space between each element */
 }
