--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -1,34 +1,28 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white;
-
   margin: 0;
-  background: radial-gradient(circle at 500px -400px, rgba(82, 110, 235, 0.699), transparent 40%),
-    #000;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.app {
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   height: 100vh;
-  width: 90vw;
+  font-family: 'Inter', sans-serif;
+  background: radial-gradient(circle at 25vw -65vh, rgba(26, 91, 188, 1), transparent 40%), #000;
 }
 
-.upload-form {
+.app {
+  text-align: center;
+  padding: 20px;
+}
+
+.centered-content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .loadedPortfolio {
@@ -72,4 +66,68 @@ code {
   color: #000000;
   padding: 5px;
   width: 100%;
+}
+
+/* .file-upload-container {
+} */
+
+.title {
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.subtitle {
+  font-size: 20px;
+  font-weight: 400;
+  color: #959595;
+}
+
+.upload-box {
+  background-color: #161616;
+  border-radius: 12px;
+  border: 1px solid #373737;
+  padding: 10px 40px 10px 40px;
+  width: 20vw;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.drag-drop-text {
+  font-size: 1rem;
+  color: #c1c2d1;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.drag-drop-text a {
+  color: #1A5BBC;
+  text-decoration: none;
+}
+
+.upload-button {
+  background-color: #1A5BBC;
+  color: white;
+  padding: 8px 50px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.upload-button:hover {
+  background-color: #3a7bc0;
+}
+
+.upload-button:disabled {
+  background-color: #363636;
+  cursor: not-allowed;
+}
+
+.file-types {
+  color: #7c7c7c;
+  font-size: 14px;
+  margin-top: 10px;
 }
