--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -9,7 +9,7 @@ body {
   overflow: hidden;
   height: 100vh;
   font-family: 'Inter', sans-serif;
-  background: radial-gradient(circle at 25vw -65vh, rgba(26, 91, 188, 1), transparent 40%), #000;
+  background: radial-gradient(circle at 25vw -35vh, rgba(26, 91, 188, 1), transparent 33%), #000;
 }
 
 .app {
@@ -68,17 +68,18 @@ body {
   width: 100%;
 }
 
-/* .file-upload-container {
-} */
-
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin:0;
+  margin-bottom: 15px;
 }
 
 .subtitle {
   font-size: 20px;
   font-weight: 400;
+  margin:0;
+  margin-bottom: 40px;
   color: #959595;
 }
 
@@ -87,7 +88,7 @@ body {
   border-radius: 12px;
   border: 1px solid #373737;
   padding: 10px 40px 10px 40px;
-  width: 20vw;
+  width: 15vw;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -96,9 +97,8 @@ body {
 
 .drag-drop-text {
   font-size: 1rem;
-  color: #c1c2d1;
-  margin-bottom: 20px;
-  font-weight: bold;
+  color: #7c7c7c;
+  margin-top: 10px;
 }
 
 .drag-drop-text a {
@@ -114,6 +114,7 @@ body {
   border-radius: 8px;
   font-size: 1rem;
   cursor: pointer;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
