--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -237,3 +237,32 @@ h1 {
 .value-negative {
   color: red;
 }
+
+.badcoins-popup {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #363636;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color:white;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.badcoins-popup>* {
+  margin-bottom: 15px;
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.603);
+}
