--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -15,7 +15,7 @@ body {
   overflow: hidden;
   height: 100vh;
   font-family: 'Inter', sans-serif;
-  background: radial-gradient(circle at 25% -30%, rgba(26, 91, 188, 1), transparent 33%), #000;
+  background: radial-gradient(circle at 25% -35%, rgba(26, 91, 188, 1), transparent 30%), #000;
 }
 
 h1 {
@@ -97,8 +97,10 @@ h1 {
   border: 1px #373737 solid;
   border-radius: 12px;
   text-align: center;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 300 !important;
   margin: 10px;
+  min-width: 200px;
 }
 
 /*=================*/
@@ -107,16 +109,16 @@ h1 {
 
 .table_component {
   overflow: hidden;
-  border-radius: 12px;
-  width: 40vw;
+  width: 60vw;
 }
 
 .table_component table {
   height: 40vh;
-  width: 40vw;
+  width: 60vw;
   table-layout: fixed;
   border-spacing: 0;
   border: 2px solid #373737;
+  border-radius: 12px; /* WHY WONT YOU WORK */
   border-collapse: collapse;
   text-align: center;
 }
@@ -125,19 +127,32 @@ h1 {
   caption-side: top;
   text-align: left;
   margin-bottom: 10px;
+  margin-left: 10px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .table_component th {
-  border-top: 1px solid #373737;
-  background-color: #212529;
-  color: #AAAA94;
+  color: #959595;
+  font-weight: 300;
+  font-size: 18px;
+  padding: 10px 0;
+  padding-left: 40px;
+  text-align: left;
 }
 
 .table_component td {
   border-top: 1px solid #373737;
-  background-color: #1B1C20;
-  color: #AAAA94;
+  color: white;
   width: 100%;
+  font-weight: 300;
+  text-align: left;
+  padding-left: 40px;
+}
+
+.table_content_right {
+  text-align: right !important;
+  padding-right: 70px;
 }
 
 .pagination {
@@ -159,6 +174,18 @@ h1 {
 .pagination button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+/*=================*/
+/*      OTHER      */
+/*=================*/
+
+.value-positive {
+  color: green !important;
+}
+
+.value-negative {
+  color: red !important;
 }
 
 /*==================*/
@@ -230,13 +257,9 @@ h1 {
   margin-top: 10px;
 }
 
-.value-positive {
-  color: green;
-}
-
-.value-negative {
-  color: red;
-}
+/*==================*/
+/*      POP-UP      */
+/*==================*/
 
 .badcoins-popup {
   content: "";
