--- a/crypto-wallet-client/src/index.css
+++ b/crypto-wallet-client/src/index.css
@@ -166,9 +166,14 @@ h1 {
   margin: 0 5px;
   padding: 5px 10px;
   border: 1px solid #373737;
-  background-color: #212529;
-  color: #AAAA94;
+  border-radius: 12px;
+  background-color: #131313;
+  color: white;
   cursor: pointer;
+}
+
+.pagination button:hover {
+  background-color: #000
 }
 
 .pagination button:disabled {
@@ -176,6 +181,19 @@ h1 {
   cursor: not-allowed;
 }
 
+.deletePortfolioButton {
+  border: 1px solid #373737;
+  border-radius: 12px;
+  background-color: #131313;
+  color: white;
+  margin-top: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.deletePortfolioButton:hover {
+  background-color: red;
+}
 /*=================*/
 /*      OTHER      */
 /*=================*/
